WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299398
`mousemove` is not fired on parent of `mouseover` targets that are removed at `mouseover`
https://bugs.webkit.org/show_bug.cgi?id=299398
Summary
`mousemove` is not fired on parent of `mouseover` targets that are removed at...
Lily Spiniolas
Reported
2025-09-23 15:30:13 PDT
When a child element has a `mouseover` listener which causes the child to be removed or replaced, the subsequent `mousemove` should be fired for the parent of the removed child. Instead, we attempt to dispatch the `mousemove` event to the child.
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2025-09-23 15:31:05 PDT
rdar://161203639
Lily Spiniolas
Comment 2
2025-09-23 18:39:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51226
EWS
Comment 3
2025-09-25 10:51:57 PDT
Committed
300522@main
(1651c7a40065): <
https://commits.webkit.org/300522@main
> Reviewed commits have been landed. Closing PR #51226 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug